Fix Friend Links

--- a/source/_posts/从经典对称到超对称.md
+++ b/source/_posts/从经典对称到超对称.md
@@ -9,8 +9,16 @@ tag: 视频
 
 [视频地址](http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E4%BB%8E%E7%BB%8F%E5%85%B8%E5%AF%B9%E7%A7%B0%E5%88%B0%E8%B6%85%E5%AF%B9%E7%A7%B0%20Part%E2%85%A0%20-%201.P1%28Av100496962%2CP1%29.mp4)
 
+### 视频：（如加载失败请点击视频地址进行观看）
+
+{% dplayer "url=http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E4%BB%8E%E7%BB%8F%E5%85%B8%E5%AF%B9%E7%A7%B0%E5%88%B0%E8%B6%85%E5%AF%B9%E7%A7%B0%20Part%E2%85%A0%20-%201.P1%28Av100496962%2CP1%29.mp4" %}
+
 ## P2
 
 [视频地址](http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E4%BB%8E%E7%BB%8F%E5%85%B8%E5%AF%B9%E7%A7%B0%E5%88%B0%E8%B6%85%E5%AF%B9%E7%A7%B0%20Part%E2%85%A0%20-%202.P2%28Av100496962%2CP2%29.mp4)
+
+### 视频：（如加载失败请点击视频地址进行观看）
+
+{% dplayer "url=http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E4%BB%8E%E7%BB%8F%E5%85%B8%E5%AF%B9%E7%A7%B0%E5%88%B0%E8%B6%85%E5%AF%B9%E7%A7%B0%20Part%E2%85%A0%20-%202.P2%28Av100496962%2CP2%29.mp4" %}
 
 
