--- a/source/_posts/量子计算简介.md
+++ b/source/_posts/量子计算简介.md
@@ -9,6 +9,10 @@ tag: 视频
 
 [视频地址](http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E9%87%8F%E5%AD%90%E8%AE%A1%E7%AE%97%E7%AE%80%E4%BB%8B%20-%201.Test%28Av837706374%2CP1%29.mp4)
 
+### 视频：（如加载失败请点击视频地址进行观看）
+
+{% dplayer "url=http://ourscgy.ustc.edu.cn/gewuqft/fileshare/media/%E3%80%90%E4%B8%AD%E7%A7%91%E5%A4%A7%E6%A0%BC%E7%89%A9%E8%87%B4%E7%9F%A5%E7%A4%BE%E3%80%91%E9%87%8F%E5%AD%90%E8%AE%A1%E7%AE%97%E7%AE%80%E4%BB%8B%20-%201.Test%28Av837706374%2CP1%29.mp4" %}
+
 
 
 
